Docrs-instances-creator: Edit README